--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 #root{
   font-family: 'Open Sans', sans-serif;
 }
+
+img{
+  width: 50%;
+  margin: 0 auto;
+}
+
+.screen-full{
+  height: 100vh;
+}
